--- a/dev/main.css
+++ b/dev/main.css
@@ -13468,10 +13468,10 @@ body {
 }
 
 .text-question {
+  color: #77787A;
+  font-weight: 400;
   text-decoration: underline;
   opacity: 0.8;
-  font-weight: 400;
-  color: #77787A;
 }
 
 .text-orange {
@@ -13484,8 +13484,8 @@ body {
 }
 
 .text-med {
-  font-weight: 500;
   color: #232323;
+  font-weight: 500;
 }
 
 .text-nevbar {
@@ -13520,6 +13520,10 @@ body {
 }
 
 .badge-orange-big {
+  color: #ffffff;
+  background-color: #FF6109;
+  border-radius: 0.12rem;
+  padding: 0.37rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13530,20 +13534,15 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 0.37rem;
   gap: 0.5rem;
   position: absolute;
   width: 5.75rem;
   height: 1.75rem;
   left: 1rem;
   top: 1rem;
-  background: #FF6109;
-  border-radius: 0.12rem;
 }
 
 .box-login {
-  width: 31rem;
-  height: 20.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13555,9 +13554,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 1.5rem 1rem;
-  gap: 1rem;
-  background: #ffffff;
+  width: 31rem;
+  height: 20.5rem;
   border-radius: 0.75rem;
+  background-color: #ffffff;
+  gap: 1rem;
 }
 
 .box-signup {
@@ -13565,11 +13566,28 @@ body {
   background: #ffffff;
   width: 31rem;
 }
+@media only screen and (max-width: 480px) {
+  .box-signup {
+    border-radius: 0.75rem;
+    background: #ffffff;
+    max-width: 21.5rem;
+  }
+}
 
 .box-home {
   width: 14.5rem;
   border: 0.063rem solid #DADADA;
   border-radius: 0.5rem;
+}
+@media only screen and (max-width: 480px) {
+  .box-home {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 90%;
+    border: 0.063rem solid #DADADA;
+    border-radius: 0.5rem;
+  }
 }
 
 .box-item {
@@ -13586,6 +13604,8 @@ body {
   padding: 0rem;
   width: 47.5rem;
   height: 3.5rem;
+  border-radius: none;
+  background-color: none;
 }
 
 .box-pass-big {
@@ -13600,12 +13620,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 1.5rem 1rem;
-  gap: 1rem;
-  position: absolute;
   width: 31rem;
   height: 14.75rem;
-  background: #f2f2f2;
   border-radius: 0.75rem;
+  background-color: #f2f2f2;
+  gap: 1rem;
+  position: absolute;
 }
 
 .box-pass-small {
@@ -13620,12 +13640,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 1.5rem 1rem;
-  gap: 1rem;
-  position: absolute;
   width: 31rem;
   height: 12.4rem;
-  background: #f2f2f2;
   border-radius: 0.75rem;
+  background-color: #f2f2f2;
+  gap: 1rem;
+  position: absolute;
 }
 
 .top-recipes {
@@ -13636,22 +13656,31 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 0.25rem;
-  gap: 0.25rem;
-  position: absolute;
   width: 2.62rem;
   height: 2rem;
+  border-radius: 0rem 0rem 0.25rem 0.25rem;
+  background-color: #FF6109;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 0.25rem;
+  position: absolute;
   left: 1.5rem;
   top: 0rem;
-  background: #FF6109;
-  border-radius: 0rem 0rem 0.25rem 0.25rem;
   color: #ffffff;
+}
+@media only screen and (max-width: 480px) {
+  .top-recipes {
+    border: 0.063rem solid #DADADA;
+    border-radius: 0.75rem;
+    padding: 0%;
+    width: 100%;
+    margin: 1%;
+  }
 }
 
 .box-bo {
@@ -13668,42 +13697,6 @@ body {
   margin: 1%;
 }
 
-/*responsive boxes*/
-@media screen and (max-width: 376px) {
-  .box-signup {
-    border-radius: 0.75rem;
-    background: #ffffff;
-    max-width: 21.5rem;
-  }
-}
-@media screen and (max-width: 600px) {
-  .box-signup {
-    border-radius: 0.75rem;
-    background: #ffffff;
-    max-width: 21.5rem;
-  }
-  .box-home {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 90%;
-    border: 0.063rem solid #DADADA;
-    border-radius: 0.5rem;
-  }
-  .img-fluid {
-    width: 100%;
-  }
-  .box-recipe {
-    border: 0.063rem solid #DADADA;
-    border-radius: 0.75rem;
-    padding: 0%;
-    width: 100%;
-    margin: 1%;
-  }
-  .box-navbar {
-    margin-top: 2rem;
-  }
-}
 .btn-orange-dark {
   background: #FF9E45;
   color: #232323;
@@ -13740,11 +13733,6 @@ body {
 }
 
 .btn-circular {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 100%;
-  border: none;
-  background: #FF6109;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13756,6 +13744,12 @@ body {
       -ms-flex-align: start;
           align-items: flex-start;
   padding: 0.37rem;
+  gap: 0;
+  width: 2rem;
+  height: 2rem;
+  background: #FF6109;
+  border-radius: 100%;
+  border: none;
 }
 
 .btn-item-list {
@@ -13766,9 +13760,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13779,6 +13770,9 @@ body {
   background: #FF9E45;
   border-radius: 0.5rem;
   border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn-admin-orange {
@@ -13789,9 +13783,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13802,6 +13793,9 @@ body {
   background: #FF9E45;
   border-radius: 0.5rem;
   border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -13814,9 +13808,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13827,6 +13818,9 @@ body {
   background: #FF4848;
   border-radius: 0.5rem;
   border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -13839,9 +13833,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13852,6 +13843,9 @@ body {
   background: #FF9E45;
   border-radius: 0.5rem;
   border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn-search {
@@ -13881,9 +13875,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13891,7 +13882,12 @@ body {
   gap: 0.37rem;
   width: 27.5rem;
   height: 1.87rem;
+  background: none;
   border-radius: 0.5rem;
+  border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn-long-dark:hover {
@@ -13906,9 +13902,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -13916,7 +13909,12 @@ body {
   gap: 0.37rem;
   width: 27.5rem;
   height: 1.87rem;
+  background: none;
   border-radius: 0.5rem;
+  border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn-long-ligth:hover {
@@ -14035,6 +14033,12 @@ body {
   height: 16.62rem;
   width: 21.5rem;
 }
+@media only screen and (max-width: 480px) {
+  .size-img-big {
+    height: 16.62rem;
+    width: 24.25rem;
+  }
+}
 
 .size-img-md {
   height: 14.62rem;
@@ -14042,14 +14046,14 @@ body {
 }
 
 .size-img-sm {
-  width: 3.063rem;
-  height: 1.9rem;
+  height: 3.063rem;
+  width: 1.9rem;
 }
 
 .size-img-list {
-  width: 246px;
-  height: 56px;
-  border-radius: 8px;
+  height: 3.5rem;
+  width: 15.375rem;
+  border-radius: 0.5rem;
 }
 
 .size-img-detail {
@@ -14062,6 +14066,12 @@ body {
 .size-img-categories {
   height: 10rem;
   width: 13rem;
+}
+@media only screen and (max-width: 480px) {
+  .size-img-categories {
+    height: 10rem;
+    width: 28rem;
+  }
 }
 
 .img-retote {
@@ -14128,10 +14138,21 @@ body {
 .margin-cards {
   margin-right: 0%;
 }
+@media only screen and (max-width: 480px) {
+  .margin-cards {
+    margin-bottom: 5%;
+  }
+}
 
 .margin-box {
   margin-left: 0%;
   margin-right: 0%;
+}
+@media only screen and (max-width: 480px) {
+  .margin-box {
+    margin-left: 0%;
+    margin-right: 0%;
+  }
 }
 
 .box-width {
@@ -14152,71 +14173,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .ocultar {
-    display: none;
-  }
-  .size-img-big {
-    height: 16.62rem;
-    width: 24.25rem;
-  }
   .center-img-detail {
     max-width: 90%;
   }
-  .margin-cards {
-    margin-bottom: 5%;
-  }
-  .margin-box {
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-  .size-img-categories {
-    height: 10rem;
-    width: 28rem;
-  }
-}
-.footer-color {
-  background: #FF9E45;
-  color: #ffffff;
-  position: absolute;
-  left: 0;
-}
-
-.footer-position-end {
-  bottom: 0rem;
-}
-
-.header-link {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.navbar-orange {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0.62rem 11.5rem;
-  gap: 23.75rem;
-  position: absolute;
-  width: 120rem;
-  height: 4.25rem;
-  left: 0rem;
-  top: 0rem;
-  background: #FF9E45;
-  -webkit-box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2509803922);
-          box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2509803922);
-}
-
-.navbar-color {
-  background: #FF9E45;
-  color: #ffffff;
 }
