--- a/dev/scss/components/_box.scss
+++ b/dev/scss/components/_box.scss
@@ -1,133 +1,82 @@
 @use '../abstracts/vars';
+@use '../abstracts/mixins';
+
+//mixin.basic-box($display, $flex-direction, $align, $padding, $width, $height, $border-radius, $background-color)
+
 .box-login {
-    width: 31rem;
-    height: 20.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5rem 1rem;
+    @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 20.5rem, 0.75rem, vars.$clr-white);
     gap: 1rem;
-    background: vars.$clr-white;
-    border-radius: 0.75rem;
 }
 
 .box-signup {
     border-radius: 0.75rem;
     background: vars.$clr-white;
     width: 31rem;
+    //media-query
+    @include mixins.respond-to(vars.$phone) {
+        border-radius: 0.75rem;
+        background: vars.$clr-white;
+        max-width: 21.5rem;
+    }
 }
 
 .box-home {
     width: 14.5rem;
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.5rem;
-}
-
-.box-item {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0rem;
-    width: 47.5rem;
-    height: 3.5rem;
-}
-
-.box-pass-big {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5rem 1rem;
-    gap: 1rem;
-    position: absolute;
-    width: 31rem;
-    height: 14.75rem;
-    background: vars.$clr-gray-95;
-    border-radius: 0.75rem;
-}
-
-.box-pass-small {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5rem 1rem;
-    gap: 1rem;
-    position: absolute;
-    width: 31rem;
-    height: 12.4rem;
-    background: vars.$clr-gray-95;
-    border-radius: 0.75rem;
-}
-
-.top-recipes {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0.25rem;
-    gap: 0.25rem;
-    position: absolute;
-    width: 2.62rem;
-    height: 2rem;
-    left: 1.5rem;
-    top: 0rem;
-    background: vars.$clr-orange-300;
-    border-radius: 0rem 0rem 0.25rem 0.25rem;
-    color: vars.$clr-white;
-}
-
-.box-bo{
-    width: 100%;
-    padding-left: 6%;
-    padding-right: 6%;
-}
-
-.box-recipe{
-    border: 0.063rem solid vars.$clr-gray-100;
-    border-radius: 0.75rem;
-    padding: 0%;
-    width: 14%;
-    margin: 1%;
-}
-
-/*responsive boxes*/
-@media screen and (max-width: 376px) {
-
-    .box-signup {
-        border-radius: 0.75rem;
-        background: vars.$clr-white;
-        max-width: 21.5rem;
-    }
-}
-
-@media screen and (max-width: 600px) {
-
-    .box-signup {
-        border-radius: 0.75rem;
-        background: vars.$clr-white;
-        max-width: 21.5rem;
-    }
-
-    .box-home {
+    //media-query
+    @include mixins.respond-to(vars.$phone) {
         justify-content: center;
         width: 90%;
         border: 0.063rem solid vars.$clr-gray-100;
         border-radius: 0.5rem;
     }
+}
 
-    .img-fluid{
+.box-item {
+    @include mixins.basic-box(flex, row, flex-start, 0rem, 47.5rem, 3.5rem, none, none);
+}
+
+.box-pass-big {
+    @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 14.75rem, 0.75rem, vars.$clr-gray-95);
+    gap: 1rem;
+    position: absolute;
+}
+
+.box-pass-small {
+    @include mixins.basic-box(flex, column, center, 1.5rem 1rem, 31rem, 12.4rem, 0.75rem, vars.$clr-gray-95);
+    gap: 1rem;
+    position: absolute;
+}
+
+.top-recipes {
+    @include mixins.basic-box(flex, row, center, 0.25rem, 2.62rem, 2rem, 0rem 0rem 0.25rem 0.25rem, vars.$clr-orange-300);
+    justify-content: center;
+    gap: 0.25rem;
+    position: absolute;
+    left: 1.5rem;
+    top: 0rem;
+    color: vars.$clr-white;
+    //media-query
+    @include mixins.respond-to(vars.$phone) {
+        border: 0.063rem solid vars.$clr-gray-100;
+        border-radius: 0.75rem;
+        padding: 0%;
         width: 100%;
+        margin: 1%;
     }
+}
 
-    .box-recipe{
+.box-bo {
+    width: 100%;
+    padding-left: 6%;
+    padding-right: 6%;
+}
+
+.box-recipe {
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.75rem;
     padding: 0%;
-    width: 100%;
+    width: 14%;
     margin: 1%;
-}
-
-.box-navbar{
-    margin-top: 2rem;
-}
-    
 }
