--- a/dev/scss/components/_button.scss
+++ b/dev/scss/components/_button.scss
@@ -1,4 +1,9 @@
 @use '../abstracts/vars';
+@use '../abstracts/mixins';
+
+//mixin btn-signup ($height, $width, $border-radius, $padding)
+//btn-basic($display, $flex-direction, $align, $padding, $gap, $width, $height, $background, $border-radius,$border)
+
 .btn-orange-dark{
     background: vars.$clr-orange-200;
     color: vars.$clr-black;
@@ -13,10 +18,7 @@
 }
 
 .btn-signup-dark {
-    height: 2rem;
-    width: 18.5rem;
-    border-radius: 0.5rem;
-    padding: 0.5rem 0.75rem 0.5rem 0.75rem;
+    @include mixins.btn-signup (2rem, 18.5rem, 0.5rem, 0.5rem 0.75rem 0.5rem 0.75rem);
 }
 
 .btn-signup-dark:hover{
@@ -24,10 +26,7 @@
 }
 
 .btn-signup-light {
-    height: 2rem;
-    width: 18.5rem;
-    border-radius: 0.5rem;
-    padding: 0.5rem 0.75rem 0.5rem 0.75rem;
+    @include mixins.btn-signup (2rem, 18.5rem, 0.5rem, 0.5rem 0.75rem 0.5rem 0.75rem);
 }
 
 .btn-signup-light:hover{
@@ -35,75 +34,32 @@
 }
 
 .btn-circular {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 100%;
-    border: none;
-    background: vars.$clr-orange-300;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0.37rem;
+    @include mixins.btn-basic(flex, row, flex-start, 0.37rem, 0, 2rem, 2rem, vars.$clr-orange-300, 100%, none);    
 }
 
 .btn-item-list {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 10.5rem, 1.87rem, vars.$clr-orange-200, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 10.5rem;
-    height: 1.87rem;
-    background: vars.$clr-orange-200;
-    border-radius: 0.5rem;
-    border: none;
 }
 
 .btn-admin-orange {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 6.12rem, 1.87rem, vars.$clr-orange-200, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 6.12rem;
-    height: 1.87rem;
-    background: vars.$clr-orange-200;
-    border-radius: 0.5rem;
-    border: none;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
 .btn-admin-red {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 6.12rem, 1.87rem, vars.$clr-red-100, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 6.12rem;
-    height: 1.87rem;
-    background: vars.$clr-red-100;
-    border-radius: 0.5rem;
-    border: none;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
+
 .btn-add {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 12.12rem, 1.87rem, vars.$clr-orange-200, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 12.12rem;
-    height: 1.87rem;
-    background: vars.$clr-orange-200;
-    border-radius: 0.5rem;
-    border: none;
 }
 
 .btn-search {
@@ -119,15 +75,8 @@
 }
 
 .btn-long-dark {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 27.5rem, 1.87rem, none, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 27.5rem;
-    height: 1.87rem;
-    border-radius: 0.5rem;
 }
 
 .btn-long-dark:hover{
@@ -135,15 +84,8 @@
 }
 
 .btn-long-ligth {
-    display: flex;
-    flex-direction: column;
+    @include mixins.btn-basic(flex, column, center, 0.5rem 0.75rem, 0.37rem, 27.5rem, 1.87rem, none, 0.5rem, none);
     justify-content: center;
-    align-items: center;
-    padding: 0.5rem 0.75rem;
-    gap: 0.37rem;
-    width: 27.5rem;
-    height: 1.87rem;
-    border-radius: 0.5rem;
 }
 
 .btn-long-ligth:hover{
