--- a/dev/main.scss
+++ b/dev/main.scss
@@ -11,3 +11,5 @@
 @use './scss/components/button';
 @use './scss/components/input';
 @use './scss/components/media';
+@use './scss/layout/footer';
+@use './scss/layout/header';
