--- a/dev/main.css
+++ b/dev/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(../../../dist/imgs);
+@import url(./../../dist/imgs/);
 /*!
  * Bootstrap  v5.3.0-alpha2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -14164,12 +14164,12 @@ body {
 }
 
 .banner-background {
-  background-image: url("../../../dist/imgs/Background.png");
+  background-image: url("./../../dist/imgs/Background.png");
   background-repeat: no-repeat;
 }
 
 .admin-background {
-  background-image: url("../../../dist/imgs/unsplash_jpkfc5_d-DI.png");
+  background-image: url("./../../dist/imgs/unsplash_jpkfc5_d-DI.png");
 }
 
 @media screen and (max-width: 600px) {
