--- a/dev/scss/components/_box.scss
+++ b/dev/scss/components/_box.scss
@@ -12,6 +12,7 @@
     border-radius: 0.75rem;
     background: vars.$clr-white;
     width: 31rem;
+
     //media-query
     @include mixins.respond-to(vars.$phone) {
         border-radius: 0.75rem;
@@ -24,6 +25,7 @@
     width: 14.5rem;
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.5rem;
+
     //media-query
     @include mixins.respond-to(vars.$phone) {
         justify-content: center;
@@ -57,6 +59,7 @@
     left: 1.5rem;
     top: 0rem;
     color: vars.$clr-white;
+
     //media-query
     @include mixins.respond-to(vars.$phone) {
         border: 0.063rem solid vars.$clr-gray-100;
@@ -73,10 +76,28 @@
     padding-right: 6%;
 }
 
-.box-recipe {
+.card-recipe {
     border: 0.063rem solid vars.$clr-gray-100;
     border-radius: 0.75rem;
-    padding: 0%;
-    width: 14%;
-    margin: 1%;
+    padding: 0px;
+    width: 336px;
+    height: 305px;
+    position: relative;
 }
+
+.user-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 32px;
+    width: 364px;
+    height: 796px;
+    background-color: vars.$clr-orange-50;
+}
+
+.text-user-container {
+    width: 314px;
+    height: 463px;
+}
+
