--- a/dev/main.css
+++ b/dev/main.css
@@ -13750,9 +13750,9 @@ body {
   height: 250px;
 }
 
-.card-recipe img {
+.card-recipe-img {
   width: 100%;
-  max-height: 110px;
+  height: 110px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -13820,8 +13820,10 @@ body {
         -ms-flex: 1 1 60%;
             flex: 1 1 60%;
   }
-  .card-recipe img {
-    height: 100% !important;
+  .card-recipe-img {
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .card-top-recipe {
     -webkit-box-orient: vertical;
@@ -13836,7 +13838,45 @@ body {
     -o-object-fit: cover;
        object-fit: cover;
   }
+  .detail-img {
+    width: 100%;
+    height: 110px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
+.img-detail {
+  border: none;
+  width: 598px;
+  height: 598px;
+  margin-right: 40px;
+}
+@media only screen and (max-width: 480px) {
+  .img-detail {
+    width: 344px;
+    height: 234px;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .title-responsive {
+    margin-top: 5rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .edit-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .btn-orange-dark {
   background: #FF9E45;
   color: #232323;
@@ -14357,6 +14397,28 @@ body {
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
   .footer-position-end {
+    bottom: 0rem;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .footer-position-end {
+    bottom: 0rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .footer-relative {
+    position: relative;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer-signup {
+    bottom: 0rem;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 979px) {
+  .footer-signup {
     bottom: 0rem;
   }
 }
