--- a/dev/scss/components/_box.scss
+++ b/dev/scss/components/_box.scss
@@ -70,8 +70,6 @@
 
 }
 
-
-
 .card-top-recipe {
     display: flex;
     flex-direction: row;
@@ -82,22 +80,22 @@
     overflow: hidden;
 }
 
-.text-container-top{
+.text-container-top {
     margin-left: 0;
     width: 280px;
     flex: 1 1 50%;
 }
 
-.img-container-top{
+.img-container-top {
     flex: 1 1 50%;
     height: 240px;
     width: 310px;
     object-fit: cover;
 
-    @include mixins.respond-to(vars.$phone){
-    width: 325px;
-    height: 110px;
-    object-fit: cover;
+    @include mixins.respond-to(vars.$phone) {
+        width: 325px;
+        height: 110px;
+        object-fit: cover;
     }
 }
 
@@ -109,9 +107,9 @@
 }
 
 
-.card-recipe img {
+.card-recipe-img {
     width: 100%;
-    max-height: 110px;
+    height: 110px;
     object-fit: cover;
 }
 
@@ -166,19 +164,56 @@
         flex: 1 1 60%;
     }
 
-    .card-recipe img {
-        height: 100% !important;
+    .card-recipe-img {
+        height: 100%;
+        object-fit: cover;
     }
 
-    .card-top-recipe{
+    .card-top-recipe {
         flex-direction: column;
         width: 300px !important;
     }
 
-    .top-recipe-img{
+    .top-recipe-img {
         width: 100%;
         max-height: 110px;
         object-fit: cover;
     }
-    
+
+    .detail-img {
+        width: 100%;
+        height: 110px;
+        object-fit: cover;
+    }
+
 }
+
+.img-detail {
+    border: none;
+    width: 598px;
+    height: 598px;
+    margin-right: 40px;
+
+    @include mixins.respond-to(vars.$phone) {
+        width: 344px;
+        height: 234px;
+        margin-bottom: 30px;
+    }
+}
+
+.title-responsive {
+    @include mixins.respond-to(vars.$phone) {
+        margin-top: 5rem;
+
+    }
+}
+
+.edit-container {
+    @include mixins.respond-to(vars.$phone) {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+
